# cycles-lightmass

./: BUILD.ib  build.bat
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cycles_lightmass.cpp  cycles_lightmass.h  cycles_standalone.cpp  cycles_xml.h
src/baker/: baker_cpu.cpp  baker_cpu.h  baker_gpu.cpp  baker_gpu.h
src/kernel/osl/shaders/: CMakeLists.txt  node_lightmass_bsdf.osl
src/lightmass/: CMakeLists.txt  SwarmDefines.h  SwarmInterface.h  interchange.cpp  interchange.h  light.cpp  light.h  mapping.cpp  mapping.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  swarm_impl.cpp  swarm_impl.h  texture.cpp  texture.h  util.cpp  util.h
